src/tests/fail/move_out_stream_error.stderr
error[E0521]: borrowed data escapes outside of closure
 --> src/tests/fail/move_out_stream_error.rs:8:4
  |
5 |     let stream_error = Mutex::new(Option::<StreamError>::None);
  |         ------------ `stream_error` declared here, outside of the closure body
6 |     let mut _handler = {
7 |         move |_: &Context, _: &mut Connection, _: i32, _: i32, err: Option<StreamError>| {
  |                                                                --- `err` is a reference that is only valid in the closure body
8 |             *stream_error.lock().unwrap() = err;
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `err` escapes the closure body here
